PoC semi working of razor files as tests

--- a/src/razor-component-testing-library.csproj
+++ b/src/razor-component-testing-library.csproj
@@ -16,6 +16,13 @@
     <PackageReference Include="Moq" Version="4.12.0" />
     <PackageReference Include="Shouldly" Version="3.0.2" />
     <PackageReference Include="XMLUnit.Core" Version="2.7.1" />
+    <PackageReference Include="xunit.extensibility.core" Version="2.4.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Update="Test.razor">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
