--- a/sample/RazorComponentLibTests/RazorComponentLibTests.csproj
+++ b/sample/RazorComponentLibTests/RazorComponentLibTests.csproj
@@ -1,20 +1,16 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
-
+  
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
-    <LangVersion>8.0</LangVersion>
-    <Nullable>enable</Nullable>
-    <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
     <IsPackable>false</IsPackable>
-    <RootNamespace>ComponentLib</RootNamespace>
+    <RootNamespace>RazorComponentLib</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components" Version="3.0.0-preview7.19365.7" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0" />
     <PackageReference Include="Moq" Version="4.12.0" />
-    <PackageReference Include="Shouldly" Version="3.0.2" />
-    <PackageReference Include="XMLUnit.Core" Version="2.7.1" />
+    <PackageReference Include="Razor.Components.Testing.Library" Version="0.1.0-preview7-19365-7-1" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1">
       <PrivateAssets>all</PrivateAssets>
@@ -23,8 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\razor-component-testing-library.csproj" />
-    <ProjectReference Include="..\ComponentLib\ComponentLib.csproj" />
+    <ProjectReference Include="..\RazorComponentLib\RazorComponentLib.csproj" />
   </ItemGroup>
 
 </Project>
