--- a/src/Egil.RazorComponents.Testing.Library.csproj
+++ b/src/Egil.RazorComponents.Testing.Library.csproj
@@ -11,23 +11,25 @@
     <PackageId>Razor.Components.Testing.Library</PackageId>
     <PackageLicenseExpression></PackageLicenseExpression>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
-    <RepositoryUrl>https://github.com/egil/razor-component-testing-library</RepositoryUrl>
-    <PackageProjectUrl>https://github.com/egil/razor-component-testing-library</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/egil/razor-components-testing-library</RepositoryUrl>
+    <PackageProjectUrl>https://github.com/egil/razor-components-testing-library</PackageProjectUrl>
     <PackageTags>razor-components unit-testing testing blazor blazor-server-side blazor-client-side</PackageTags>
-    <Version>0.1.0-preview7-19365-7-1</Version>
+    <Version>0.1.0-preview7-19365-7-2</Version>
     <Authors>Egil Hansen</Authors>
     <Company>Egil Hansen</Company>
     <Product>Razor Component Testing Library</Product>
-    <Description>Testing library for Razor Components, that allows you to define your component under test and the expected output HTML in a .razor files.</Description>
+    <Description>
+      Testing library for Razor Components, that allows you to easily define your component under test and the expected output HTML in a .razor files. See the projects GitHub page for usage details: https://github.com/egil/razor-components-testing-library
+    </Description>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.Browser" Version="3.0.0-preview7.19365.7" />
     <PackageReference Include="Microsoft.AspNetCore.Components" Version="3.0.0-preview7.19365.7" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0" />
-    <PackageReference Include="Shouldly" Version="3.0.2" />
     <PackageReference Include="System.Text.Encodings.Web" Version="4.6.0-preview7.19362.9" />
     <PackageReference Include="XMLUnit.Core" Version="2.7.1" />
+    <PackageReference Include="xunit.assert" Version="2.4.1" />
     <PackageReference Include="xunit.extensibility.core" Version="2.4.1" />
   </ItemGroup>
 
