Unnested test project

--- a/tests/Egil.RazorComponents.Testing.Library.Tests.csproj
+++ b/tests/Egil.RazorComponents.Testing.Library.Tests.csproj
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Egil.RazorComponents.Testing.Library.csproj" />
+    <ProjectReference Include="..\src\Egil.RazorComponents.Testing.Library.csproj" />
   </ItemGroup>
 
 </Project>
