--- a/src/Egil.RazorComponents.Testing.Library.csproj
+++ b/src/Egil.RazorComponents.Testing.Library.csproj
@@ -14,7 +14,7 @@
     <RepositoryUrl>https://github.com/egil/razor-components-testing-library</RepositoryUrl>
     <PackageProjectUrl>https://github.com/egil/razor-components-testing-library</PackageProjectUrl>
     <PackageTags>razor-components unit-testing testing blazor blazor-server-side blazor-client-side</PackageTags>
-    <Version>0.1.0-preview7-19365-7-5</Version>
+    <Version>0.1.0-preview8-19405-7-1</Version>
     <Authors>Egil Hansen</Authors>
     <Company>Egil Hansen</Company>
     <Product>Razor Component Testing Library</Product>
@@ -24,10 +24,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components.Browser" Version="3.0.0-preview7.19365.7" />
-    <PackageReference Include="Microsoft.AspNetCore.Components" Version="3.0.0-preview7.19365.7" />
+    <PackageReference Include="Microsoft.AspNetCore.Components" Version="$(AspNetCoreVersion)" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="$(AspNetCoreVersion)" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0" />
-    <PackageReference Include="System.Text.Encodings.Web" Version="4.6.0-preview7.19362.9" />
+    <PackageReference Include="System.Text.Encodings.Web" Version="4.6.0-preview8.19405.3" />
     <PackageReference Include="XMLUnit.Core" Version="2.7.1" />
     <PackageReference Include="xunit.assert" Version="2.4.1" />
     <PackageReference Include="xunit.extensibility.core" Version="2.4.1" />
