--- a/tests/Egil.RazorComponents.Testing.Library.Tests.csproj
+++ b/tests/Egil.RazorComponents.Testing.Library.Tests.csproj
@@ -7,7 +7,7 @@
     <LangVersion>8.0</LangVersion>
     <Nullable>enable</Nullable>
     <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
-    <RootNamespace>Egil.RazorComponents.Testing.Library</RootNamespace>
+    <RootNamespace>Egil.RazorComponents.Testing</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
