Upgrade to latest release

--- a/sample/RazorComponentLibTests/RazorComponentLibTests.csproj
+++ b/sample/RazorComponentLibTests/RazorComponentLibTests.csproj
@@ -14,7 +14,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="$(AspNetCoreVersion)" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0" />
     <PackageReference Include="Moq" Version="4.13.0" />
-    <PackageReference Include="Razor.Components.Testing.Library" Version="0.1.0-preview9-19424-4-1" />
+    <PackageReference Include="Razor.Components.Testing.Library" Version="0.2.0" />
     <PackageReference Include="xunit.assert" Version="2.4.1" />
     <PackageReference Include="xunit.core" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1">
