--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,5 +1,5 @@
 <Project>
     <PropertyGroup>
-        <AspNetCoreVersion>3.0.0</AspNetCoreVersion>
+        <AspNetCoreVersion>3.1.0-preview1.19508.20</AspNetCoreVersion>
     </PropertyGroup>
 </Project>
