Test and Snapshop tests

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,5 +1,20 @@
 <Project>
-    <PropertyGroup>
-        <AspNetCoreVersion>3.0.0</AspNetCoreVersion>
-    </PropertyGroup>
+  <PropertyGroup>
+    <AspNetCoreVersion>3.1.0-preview1.19508.20</AspNetCoreVersion>
+  </PropertyGroup>
+
+  <PropertyGroup>
+    <LangVersion>8.0</LangVersion>
+    <Nullable>enable</Nullable>
+    <WarningsAsErrors>CS8600;CS8602;CS8603;CS8625</WarningsAsErrors>
+  </PropertyGroup>
+
+  <PropertyGroup>
+    <AnnotatedReferenceAssemblyVersion>3.0.0</AnnotatedReferenceAssemblyVersion>
+  </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="TunnelVisionLabs.ReferenceAssemblyAnnotator" Version="1.0.0-alpha.90" PrivateAssets="all" />
+    <PackageDownload Include="Microsoft.NETCore.App.Ref" Version="[$(AnnotatedReferenceAssemblyVersion)]" />
+  </ItemGroup>
+
 </Project>
