--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -9,12 +9,12 @@
     <WarningsAsErrors>CS8600;CS8602;CS8603;CS8625</WarningsAsErrors>
   </PropertyGroup>
 
-  <PropertyGroup>
+  <!--<PropertyGroup>
     <AnnotatedReferenceAssemblyVersion>3.0.0</AnnotatedReferenceAssemblyVersion>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="TunnelVisionLabs.ReferenceAssemblyAnnotator" Version="1.0.0-alpha.90" PrivateAssets="all" />
     <PackageDownload Include="Microsoft.NETCore.App.Ref" Version="[$(AnnotatedReferenceAssemblyVersion)]" />
-  </ItemGroup>
+  </ItemGroup>-->
 
 </Project>
