Added various tools and methods for testing Todos

--- a/.editorconfig
+++ b/.editorconfig
@@ -2,3 +2,6 @@
 
 # CA1822: Mark members as static
 dotnet_diagnostic.CA1822.severity = suggestion
+
+# CS8603: Possible null reference return.
+dotnet_diagnostic.CS8603.severity = none
