--- a/sample/src/Egil.RazorComponents.Testing.Library.SampleApp.csproj
+++ b/sample/src/Egil.RazorComponents.Testing.Library.SampleApp.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <RootNamespace>Egil.RazorComponents.Testing.SampleApp</RootNamespace>
   </PropertyGroup>
 
 </Project>
