--- a/src/Egil.RazorComponents.Testing.Library.csproj
+++ b/src/Egil.RazorComponents.Testing.Library.csproj
@@ -1,8 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
   <PropertyGroup>
-    <GenerateDocumentationFile>true</GenerateDocumentationFile>
-    <RootNamespace>Egil.RazorComponents.Testing</RootNamespace>
+    <GenerateDocumentationFile>false</GenerateDocumentationFile>
+    <RootNamespace>Egil.RazorComponents.Testing</RootNamespace>    
     <TargetFramework>netstandard2.1</TargetFramework>
     <RazorLangVersion>3.0</RazorLangVersion>
     <PackageId>Razor.Components.Testing.Library</PackageId>
