better docs, tweaked itestcontext by removing unneeded method.

--- a/.editorconfig
+++ b/.editorconfig
@@ -2,3 +2,6 @@
 
 # CA1822: Mark members as static
 dotnet_diagnostic.CA1822.severity = suggestion
+
+# CA1032: Implement standard exception constructors
+dotnet_diagnostic.CA1032.severity = suggestion
