Tweaks to workflows

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 name: CI
 
-on: [push]
+on: [push, pull_request]
 
 jobs:  
   build:    
@@ -13,3 +13,4 @@ jobs:
         dotnet-version: '3.1.100'  
     - run: dotnet build -c Release /nowarn:CS1591
     - run: dotnet test -c Release /nowarn:CS1591
+    - run: dotnet pack src/ -c Release -o ${GITHUB_WORKSPACE} -p:version=1.0.0 /nowarn:CS1591
