--- a/.github/workflows/nuget-pack-push.yml
+++ b/.github/workflows/nuget-pack-push.yml
@@ -1,8 +1,9 @@
 name: CD
 on:
-  push:
-    tags:
-      - '*'
+  release:
+    types:
+      - created
+
 jobs:  
   build:    
     name: Push ${{ github.ref }} to NUGET
