--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,12 @@ jobs:
     runs-on: ubuntu-latest  
     steps:    
       - uses: actions/checkout@v1
+      - name: Update version string
+        uses: jacobtomlinson/gha-find-replace@master
+        with:
+          find: "TESTING_LIB_VERSION"
+          replace: $VERSION
+          include: "Company.RazorTests1.csproj"
       - uses: actions/setup-dotnet@v1
         with:
           dotnet-version: '3.1.100'      
@@ -18,12 +24,6 @@ jobs:
         run: dotnet test -c Release /nowarn:CS1591
       - name: Creating package
         run: dotnet pack src/ -c Release -o ${GITHUB_WORKSPACE} -p:version=$VERSION /nowarn:CS1591
-      - name: Find and Replace
-        uses: jacobtomlinson/gha-find-replace@master
-        with:
-          find: TESTING_LIB_VERSION
-          replace: $VERSION
-          include: Company.RazorTests1.csproj"
       - name: Creating template package
         run: dotnet pack template/ -c Release -o ${GITHUB_WORKSPACE} -p:PackageVersion=$VERSION
       - name: Install template package        
