--- a/template/template/Company.RazorTests1.csproj
+++ b/template/template/Company.RazorTests1.csproj
@@ -9,7 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components" Version="3.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="3.1.0" />
-    <PackageReference Include="Razor.Components.Testing.Library" Version="TESTING_LIB_VERSION" />
+    <PackageReference Include="Razor.Components.Testing.Library" Version="#{VERSION}#" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.4.0" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1">
