--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,8 +4,8 @@ on: [push, pull_request]
 
 jobs:  
   build:        
-    env:  #1.0.0-beta-1337
-      VERSION: 1.0.0-beta-3
+    env:
+      VERSION: 1.0.0-beta-1337
     runs-on: ubuntu-latest  
     steps:    
       - uses: actions/checkout@v1
@@ -29,6 +29,6 @@ jobs:
       - name: Create razor test project
         run: dotnet new razortest -o ${GITHUB_WORKSPACE}/Test
       - name: Restore packages
-        run: dotnet restore ${GITHUB_WORKSPACE}/Test/Test.csproj #--source ${GITHUB_WORKSPACE} --verbosity d
+        run: dotnet restore ${GITHUB_WORKSPACE}/Test/Test.csproj --source ${GITHUB_WORKSPACE}
       - name: Run tests in test project       
         run: dotnet test ${GITHUB_WORKSPACE}/Test
