--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,10 +2,12 @@ name: CI
 
 on: [push, pull_request]
 
+env:
+  VERSION: 1.0.0-beta-1337
+
 jobs:  
-  build:        
-    env:
-      VERSION: 1.0.0-beta-1337
+  build:
+    name: Build and verify library
     runs-on: ubuntu-latest  
     steps:    
       - uses: actions/checkout@v1
@@ -22,6 +24,10 @@ jobs:
         run: dotnet test -c Release /nowarn:CS1591
       - name: Creating package
         run: dotnet pack src/ -c Release -o ${GITHUB_WORKSPACE} -p:version=$VERSION /nowarn:CS1591
+  template:
+    name: Build and verify template
+    runs-on: ubuntu-latest  
+    steps:    
       - name: Creating template package
         run: dotnet pack template/ -c Release -o ${GITHUB_WORKSPACE} -p:PackageVersion=$VERSION
       - name: Install template package        
