--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: CI
 on: [push, pull_request]
 
 env:
-  VERSION: 1.0.0-beta-1337
+  VERSION: 1337.1337.1337
 
 jobs:  
   build:
@@ -18,23 +18,15 @@ jobs:
       - uses: actions/setup-dotnet@v1
         with:
           dotnet-version: '3.1.100'      
-      - name: Building project
-        run: dotnet build -c Release
-      - name: Running tests
-        run: dotnet test -c Release /nowarn:CS1591
-      - name: Creating package
-        run: dotnet pack src/ -c Release -o ${GITHUB_WORKSPACE} -p:version=$VERSION /nowarn:CS1591
-  template:
-    name: Build and verify template
-    runs-on: ubuntu-latest  
-    steps:    
-      - name: Creating template package
-        run: dotnet pack template/ -c Release -o ${GITHUB_WORKSPACE} -p:PackageVersion=$VERSION
-      - name: Install template package        
-        run: dotnet new --install ${GITHUB_WORKSPACE}/Razor.Components.Testing.Library.Template.$VERSION.nupkg
-      - name: Create razor test project
-        run: dotnet new razortest -o ${GITHUB_WORKSPACE}/Test
-      - name: Restore packages
-        run: dotnet restore ${GITHUB_WORKSPACE}/Test/Test.csproj --source ${GITHUB_WORKSPACE}
-      - name: Run tests in test project       
-        run: dotnet test ${GITHUB_WORKSPACE}/Test
+      - name: Building and verifying library
+        run: |
+          dotnet build -c Release
+          dotnet test -c Release /nowarn:CS1591
+          dotnet pack src/ -c Release -o ${GITHUB_WORKSPACE} -p:version=$VERSION /nowarn:CS1591
+      - name: Buidling and verifying template
+        run: |
+          dotnet pack template/ -c Release -o ${GITHUB_WORKSPACE} -p:PackageVersion=$VERSION
+          dotnet new --install ${GITHUB_WORKSPACE}/Razor.Components.Testing.Library.Template.$VERSION.nupkg
+          dotnet new razortest -o ${GITHUB_WORKSPACE}/Test
+          dotnet restore ${GITHUB_WORKSPACE}/Test/Test.csproj --source ${GITHUB_WORKSPACE}
+          dotnet test ${GITHUB_WORKSPACE}/Test
