--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: CI
 on: [push, pull_request]
 
 env:
-  VERSION: 1337.1337.1337
+  VERSION: 1.0.0-beta-1337
 
 jobs:  
   build:
@@ -22,7 +22,8 @@ jobs:
         run: |
           dotnet build -c Release
           dotnet test -c Release /nowarn:CS1591
-          dotnet pack src/ -c Release -o ${GITHUB_WORKSPACE} -p:version=$VERSION /nowarn:CS1591
+      - name: Creating library package
+        run: dotnet pack src/ -c Release -o ${GITHUB_WORKSPACE} -p:version=$VERSION /nowarn:CS1591
       - name: Buidling and verifying template
         run: |
           dotnet pack template/ -c Release -o ${GITHUB_WORKSPACE} -p:PackageVersion=$VERSION
