--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,10 +24,10 @@ jobs:
           dotnet test -c Release /nowarn:CS1591
       - name: Creating library package
         run: dotnet pack src/ -c Release -o ${GITHUB_WORKSPACE} -p:version=$VERSION /nowarn:CS1591
-      - name: Buidling and verifying template
+      - name: Buidling template package
+        run: dotnet pack template/ -c Release -o ${GITHUB_WORKSPACE} -p:PackageVersion=$VERSION
+      - name: Verifying template
         run: |
-          dotnet pack template/ -c Release -o ${GITHUB_WORKSPACE} -p:PackageVersion=$VERSION
           dotnet new --install ${GITHUB_WORKSPACE}/Razor.Components.Testing.Library.Template.$VERSION.nupkg
-          dotnet new razortest -o ${GITHUB_WORKSPACE}/Test
-          dotnet restore ${GITHUB_WORKSPACE}/Test/Test.csproj --source ${GITHUB_WORKSPACE}
+          dotnet new razortest -o ${GITHUB_WORKSPACE}/Test --nuget-source ${GITHUB_WORKSPACE}          
           dotnet test ${GITHUB_WORKSPACE}/Test
