--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: CI
 on: [push, pull_request]
 
 env:
-  VERSION: 1.0.0-beta-1337
+  VERSION: 0.0.1
 
 jobs:  
   build:
@@ -30,5 +30,5 @@ jobs:
         run: |
           dotnet new --install ${GITHUB_WORKSPACE}/Razor.Components.Testing.Library.Template.$VERSION.nupkg
           dotnet new razortest -o ${GITHUB_WORKSPACE}/Test --no-restore
-          dotnet restore ${GITHUB_WORKSPACE}/Test/Test.csproj --source ${GITHUB_WORKSPACE} --source https://api.nuget.org/
+          dotnet restore ${GITHUB_WORKSPACE}/Test/Test.csproj --source ${GITHUB_WORKSPACE} --source "./;https:\api.nuget.org\"
           dotnet test ${GITHUB_WORKSPACE}/Test
