--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,5 +30,5 @@ jobs:
         run: |
           dotnet new --install ${GITHUB_WORKSPACE}/Razor.Components.Testing.Library.Template.$VERSION.nupkg
           dotnet new razortest -o ${GITHUB_WORKSPACE}/Test --no-restore
-          dotnet restore ${GITHUB_WORKSPACE}/Test/Test.csproj --source ${GITHUB_WORKSPACE} --source "./;https:\api.nuget.org\"
+          dotnet restore ${GITHUB_WORKSPACE}/Test/Test.csproj --source ${GITHUB_WORKSPACE} --source https://api.nuget.org/v3/
           dotnet test ${GITHUB_WORKSPACE}/Test
