--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,12 +12,12 @@ jobs:
     name: Build and verify library    
     runs-on: ubuntu-latest  
     steps:    
-      - run: echo "Version = $VERSION | Branch = $GITHUB_BRANCH | Commit = $GITHUB_SHA"
+      - run: echo Version $VERSION - Branch $GITHUB_BRANCH - Commit $GITHUB_SHA
       - uses: actions/checkout@v1
       - name: Update version string
         uses: cschleiden/replace-tokens@v1
         with:
-          files: '["**/*.csproj"]'        
+          files: '["*.csproj", "**/*.csproj"]'        
       - uses: actions/setup-dotnet@v1
         with:
           dotnet-version: '3.1.100'      
@@ -28,7 +28,7 @@ jobs:
       - name: Creating library package
         run: dotnet pack src/ -c Release -o ${GITHUB_WORKSPACE} -p:version=$VERSION /nowarn:CS1591
       - name: Buidling template package
-        run: dotnet pack template/ -c Release -o ${GITHUB_WORKSPACE} -p:PackageVersion=$VERSION
+        run: dotnet pack template/ -c Release -o ${GITHUB_WORKSPACE} -p:version=$VERSION -p:PackageVersion=$VERSION
       - name: Verifying template
         run: |
           dotnet new --install ${GITHUB_WORKSPACE}/Razor.Components.Testing.Library.Template.$VERSION.nupkg
