--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ on: [push, pull_request]
 
 env:
   VERSION: 1337.0.0
-  GITHUB_BRANCH: ${GITHUB_REF/refs\/heads\/}
+  GITHUB_BRANCH: ${{GITHUB_REF/refs\/heads\/}}
 
 jobs:  
   build:
@@ -14,24 +14,14 @@ jobs:
     steps:    
       - run: echo Version $VERSION - Branch $GITHUB_BRANCH - Commit $GITHUB_SHA
       - uses: actions/checkout@v1
-      - name: Update version string
+      - uses: rlespinasse/github-slug-action@master
+      - name: Print slug variables
+        run: |
+          echo ${{ env.GITHUB_REF_SLUG }}
+          echo ${{ env.GITHUB_HEAD_REF_SLUG }}
+          echo ${{ env.GITHUB_BASE_REF_SLUG }}
+          echo ${{ env.GITHUB_SHA_SHORT }}        
+      - name: Update tokens in project files
         uses: cschleiden/replace-tokens@v1
         with:
-          files: '["*.csproj", "**/*.csproj"]'        
-      - uses: actions/setup-dotnet@v1
-        with:
-          dotnet-version: '3.1.100'      
-      - name: Building and verifying library
-        run: |
-          dotnet build -c Release
-          dotnet test -c Release /nowarn:CS1591
-      - name: Creating library package
-        run: dotnet pack src/ -c Release -o ${GITHUB_WORKSPACE} -p:version=$VERSION /nowarn:CS1591
-      - name: Buidling template package
-        run: dotnet pack template/ -c Release -o ${GITHUB_WORKSPACE} -p:version=$VERSION -p:PackageVersion=$VERSION
-      - name: Verifying template
-        run: |
-          dotnet new --install ${GITHUB_WORKSPACE}/Razor.Components.Testing.Library.Template.$VERSION.nupkg
-          dotnet new razortest -o ${GITHUB_WORKSPACE}/Test
-          dotnet restore ${GITHUB_WORKSPACE}/Test/Test.csproj --source ${GITHUB_WORKSPACE}
-          dotnet test ${GITHUB_WORKSPACE}/Test
+          files: '["*.csproj", "**/*.csproj"]'
