--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,14 +5,14 @@ on: [push, pull_request]
 
 env:
   VERSION: 1337.0.0
-  GITHUB_BRANCH: ${{GITHUB_REF/refs\/heads\/}}
+  GITHUB_BRANCH: $(echo ${GITHUB_REF#refs/heads/} | sed 's/\//_/g')
 
 jobs:  
   build:
     name: Build and verify library    
     runs-on: ubuntu-latest  
     steps:    
-      - run: echo "::set-env name=GITHUB_BRANCH::$(echo ${GITHUB_REF#refs/heads/} | sed 's/\//_/g')"
+      #- run: echo "::set-env name=GITHUB_BRANCH::$(echo ${GITHUB_REF#refs/heads/} | sed 's/\//_/g')"
       - run: echo Version $VERSION - Branch $GITHUB_BRANCH - Commit $GITHUB_SHA
       - uses: actions/checkout@v1
       - uses: rlespinasse/github-slug-action@master
