--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,15 +5,16 @@ on: [push, pull_request]
 
 env:
   VERSION: 1337.0.0
-  GITHUB_BRANCH: $(echo ${GITHUB_REF#refs/heads/} | sed 's/\//_/g')
-
+  BRANCH: ''
+  COMMIT: $GITHUB_SHA
+  
 jobs:  
   build:
     name: Build and verify library    
     runs-on: ubuntu-latest  
     steps:    
-      #- run: echo "::set-env name=GITHUB_BRANCH::$(echo ${GITHUB_REF#refs/heads/} | sed 's/\//_/g')"
-      - run: echo Version $VERSION - Branch $GITHUB_BRANCH - Commit $GITHUB_SHA
+      - run: echo "::set-env name=BRANCH::$(echo ${GITHUB_REF#refs/heads/} | sed 's/\//_/g')"
+      - run: echo Version $VERSION - Branch $BRANCH - Commit $COMMIT
       - uses: actions/checkout@v1
       - uses: rlespinasse/github-slug-action@master
       - name: Print slug variables
