--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
         with:
           dotnet-version: '3.1.100'      
       - name: Building project
-        run: dotnet build -c Release
+        run: dotnet build -c Release /nowarn:CS1591
       - name: Running tests
         run: dotnet test -c Release /nowarn:CS1591
       - name: Creating package
